# kerndbox

./: .gitignore  AGENT.md  DEVBOX-ENGINE.md  DOCKER.md  Dockerfile  Makefile  PATCHING-PHASE.md  README.md  build.sh  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  image.yml  kernel.yml  rootfs.yml  test.yml
arch/arm64/: Makefile.um
arch/arm64/um/os-Linux/rust/: Cargo.toml
arch/arm64/um/os-Linux/rust/src/: ffi.rs  lib.rs  mcontext.rs  prctl.rs  ptrace.rs  signal.rs  tls.rs
docs/uml-research/: 01_compiling-and-switches.md  02_porting-to-new-architecture.md  03_creating-filesystems.md  04_uml-howto-v2-kernel-org.md  ARM64_PORT_ANALYSIS.md  INDEX.md  archive-README.md  uml-patch-x86_64-2.6.4.patch
prebuilt/arm64/: README.md
prebuilt/tools/: uml-utilities_arm64.deb
scripts/: build-arm64.sh  build-debian-image.sh  build-x86.sh  entrypoint.sh  fetch-rootfs.sh  menu.sh  run-test.sh  test-patches-local.sh  test-patches-upstream.sh
src/uml-helpers/: Makefile  pack_helpers.py  port-helper.c  tunctl.c  (+3 more)
src/uml-tools/: Cargo.toml  pack_helpers.py
src/uml-tools/port-helper/: Cargo.toml
src/uml-tools/port-helper/src/: main.rs
src/uml-tools/tunctl/: Cargo.toml
src/uml-tools/tunctl/src/: main.rs
src/uml-tools/uml-mconsole/: Cargo.toml
src/uml-tools/uml-mconsole/src/: main.rs
src/uml-tools/uml-mkcow/: Cargo.toml
src/uml-tools/uml-mkcow/src/: main.rs
src/uml-tools/uml-switch/: Cargo.toml
src/uml-tools/uml-switch/src/: main.rs
src/uml-tools/uml-watchdog/: Cargo.toml
src/uml-tools/uml-watchdog/src/: main.rs
(+99 files in other folders)
