[workspace]
members = [
    "port-helper",
    "uml-watchdog",
    "uml-mconsole",
    "uml-mkcow",
    "uml-switch",
    "tunctl",
]
resolver = "2"

[workspace.package]
version  = "0.2.0"
edition  = "2021"
license  = "GPL-2.0"

[profile.release]
opt-level = "z"
strip     = true
lto       = true
panic     = "abort"
